--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-rows: 100px 1fr 30px; /* Header - Main (Section) - Footer */
+    grid-template-rows: 100px 1fr 40px; /* Header - Main (Section) - Footer */
     background-color: #F8EBF1;
     background-image: url("images/bg.png");
     font-family: "Merienda-Regular", Arial, sans-serif;
@@ -86,7 +86,7 @@ section {
     flex-direction: column;
     align-items: center;
     overflow-y: auto;
-    overflow-x: hidden;
+    overflow-x: hidden
 }
 
 .day-content, .note-content {
@@ -123,6 +123,10 @@ section {
     font-size: 22px;
 }
 
+.editable-li {
+    outline: none;
+}
+
 /* Notas */
 .note-section textarea {
     width: 100%;
@@ -136,13 +140,24 @@ section {
 
 /* ===== FOOTER ===== */
 footer {
-    color: white;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
+    flex-direction: column;
+    align-items: end;
+    padding-right: 20px;
 }
 
-.editable-li {
-    outline: none;
+.refresh-week-btn {
+    border: none;
+    background: none;
+    border-radius: 15px;
 }
+
+.refresh-week-btn img:hover {
+    rotate: 180deg;
+}
+
+button img {
+    filter: invert(1);
+    width: 35px;
+}
+
